# eos-dropbox-app

./: README.md  com.dropbox.Client.appdata.xml  com.dropbox.Client.desktop  com.dropbox.Client.json  configure.ac  eos-dropbox-app.in  eos-dropbox-app.py  portallauncher.py
debian/: changelog  control  copyright
src/: Makefile.am  eos-dropbox-app  eos-dropbox-app.py  portallauncher.py  xdg-open.in  xdg-open.py
